--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,14 +1,22 @@
 .App {
-  background-color: pink;
+  background-color: rgb(61, 39, 43);
   height: 100vh;
 }
 
 ul {
-  background-color: aquamarine;
+  background-color: rgb(199, 120, 150);
 margin-top:0;
+list-style: none;
+text-align: center;
+
 }
 li{
   margin-right: 20px;
+display: inline-block;
+margin:20px;
+margin-bottom: 20px;
+
+color: wheat !important;
 
 
 }
