--- a/src/components/movies.css
+++ b/src/components/movies.css
@@ -1,23 +1,25 @@
-.box {
+.boxx {
     width:900px;
     height: 500px;
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     position: absolute;
-    top:50%;
+    top:55%;
     left:50%;
+    transform: translate(-50%,-50%);
     display:flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: flex-start;
     flex-wrap: wrap;
-    
+    border: 4px solid blue;
 
 }
 
 .smallbox {
+    margin-top:2px;
     width:200px;
     height: 240px;
     background-color: peru;
-    border:3px solid white;
+    border:2px solid white;
     
 }
 .smallbox img {
