--- a/src/components/onemovie.css
+++ b/src/components/onemovie.css
@@ -13,3 +13,37 @@
     
 
 }
+
+
+.movieImg{
+    margin-top:18px;
+    margin-left:10px;
+    width:300px;
+    height: 450px;
+    background-color: blue;
+    border:5px solid black;
+    border-radius: 2px;
+    
+}
+.movieImg img {
+    height: 100%;
+    width:100%;
+}
+.titlee h2 {
+    border-bottom:5px solid rgba(43, 43, 43, 0.74);
+
+}
+.info {
+    width:500px;
+    height: 400px;
+    display: inline;
+    position: absolute;
+    top:15%;
+    left:40%;
+    font-family: "Times New Roman";
+   
+}
+
+.info h3 {
+    margin-bottom: 0px;
+}
