--- a/src/components/movies.css
+++ b/src/components/movies.css
@@ -3,17 +3,23 @@
     height: 500px;
     background-color: rgb(0, 0, 0);
     position: absolute;
-    top:55%;
+    top:62%;
     left:50%;
     transform: translate(-50%,-50%);
     display:flex;
     justify-content: space-around;
     align-items: flex-start;
     flex-wrap: wrap;
-    border: 4px solid blue;
+    border: 4px solid rgba(255, 255, 255, 0.747);
     overflow-y:auto;
+    
 
 
+}
+.bigtitle {
+    color:white;
+    display: block;
+ text-align: center;
 }
 
 .smallbox {
