made the new menu work to fetch different kind of movies .

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -41,5 +41,11 @@ font-size:20px;
 #blabla li {
   display:inline-block;
   margin-left:10px;
+  color:white;
+  cursor: pointer;
+}
+
+#blabla li:hover{
+  color:black;
 }
 
