--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,6 +1,11 @@
 .App {
   background-color: rgb(61, 39, 43);
- height: 100vh;
+  position:fixed;
+    top:0;
+    width:100%;
+    height:100%;
+    overflow-y:auto;
+
 }
 
 .mainList {
