--- a/src/components/onemovie.css
+++ b/src/components/onemovie.css
@@ -15,7 +15,7 @@
     background-repeat: no-repeat;
     border:3px solid white;
     
-    
+    overflow-y: auto;
 
 }
 
@@ -26,8 +26,8 @@
     width:300px;
     height: 450px;
     background-color: blue;
-    border:5px solid black;
-    border-radius: 2px;
+    border:5px solid rgb(109, 109, 109);
+    border-radius: 4px;
     
 }
 .movieImg img {
